Fix contact icon spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -167,10 +167,6 @@ button {
   top: 2px;
 }
 
-/* #projects {
-  margin-top: 100px;
-} */
-
 #about {
   left: 0;
   margin-top: 160px;
@@ -213,31 +209,25 @@ button {
 }
 
 #contact {
-  /* background: #292d3c; */
-  /* box-shadow: 0px 2px 8px rgb(30, 30, 30); */
-  /* position: absolute; */
-  /* left: 0; */
-  /* top: 60px; */
-  /* width: 100%; */
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 100px;
   margin-top: 80px;
+  max-width: 1080px;
+  overflow: hidden;
+  position: relative;
+}
+
+#contact h2 {
+  min-width: 100%;
 }
 
 #contact-anchor {
   top: -140px;
-}
-
-#contact-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1080px;
-  overflow: hidden;
-  /* padding-left: 20px;
-  padding-right: 20px; */
-  position: relative;
 }
 
 .no-underline {
@@ -417,56 +407,9 @@ button {
   position: relative;
 }
 
-.email,
-.phone,
-.github,
-.linkedin,
-.twitter {
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-size: 40px 40px;
-  height: 40px;
-  width: 40px;
-}
-
-.email {
-  background-image: url('/img/envelope-square-solid.png');
-}
-
-.email:hover {
-  background-image: url('/img/envelope-square-solid_hover.png');
-}
-
-.phone {
-  background-image: url('/img/phone-square-solid.png');
-}
-
-.phone:hover {
-  background-image: url('/img/phone-square-solid_hover.png');
-}
-
-.github {
-  background-image: url('/img/github-square-brands.png');
-}
-
-.github:hover {
-  background-image: url('/img/github-square-brands_hover.png');
-}
-
-.linkedin {
-  background-image: url('/img/linkedin-brands.png');
-}
-
-.linkedin:hover {
-  background-image: url('/img/linkedin-brands_hover.png');
-}
-
-.twitter {
-  background-image: url('/img/twitter-square-brands.png');
-}
-
-.twitter:hover {
-  background-image: url('/img/twitter-square-brands_hover.png');
+.contact-logo {
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .clint-dot {
@@ -570,7 +513,6 @@ button {
     text-align: start;
   }
   nav ul {
-    /* padding-right: 20px; */
     position: absolute;
     right: 20px;
     text-align: right;
@@ -603,8 +545,8 @@ button {
     margin-right: 50px;
   }
   .contact-logo {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
   .clint-dot {
     left: 179px;
